Api fixes
