# src/controllers/ingredientsController.js
@@ -1,8 +1,8 @@
-import { listOfIngredients } from '../services/ingredientsService.js';
+import * as ingService from '../services/ingredientsService.js';
 
 export const getAllIngredients = async (req, res, next) => {
   try {
-    const ingredients = await listOfIngredients();
+    const ingredients = await ingService.getAllIngredients();
     return res.status(200).json(ingredients);
   } catch (error) {
     next(error);
